Change post preview styles for a correct alignment

--- a/src/shared/component/post-preview.module.scss
+++ b/src/shared/component/post-preview.module.scss
@@ -21,11 +21,15 @@
     .image-col {
         display: flex;
         justify-content: flex-end;
+        align-items: center;
         padding: 0;
+        a {
+            height: fit-content;
+        }
         img {
             border-radius: 4px;
-            width: 30vh;
-            height: 30vh;
+            width: 35vh;
+            height: 35vh;
             object-fit: cover;
         }
     }
@@ -45,11 +49,15 @@
     .image-col {
         display: flex;
         justify-content: flex-start;
+        align-items: center;
         padding: 0;
+        a {
+            height: fit-content;
+        }
         img {
             border-radius: 4px;
-            width: 30vh;
-            height: 30vh;
+            width: 40vh;
+            height: 40vh;
             object-fit: cover;
         }
     }
